<resources>
    <string name="app_name">KakaoBot</string>
    <string name="title_log">Log</string>
    <string name="title_debug">Debug</string>
    <string name="title_setting">Setting</string>
    <string name="room">Room</string>
    <string name="sender">Sender</string>
    <string name="setting_power">Using KakaoBot</string>
    <string name="setting_reload">Script reload</string>
    <string name="setting_script_go">Edit script</string>
    <string name="delete_log">Logs are deleted</string>
    <string name="give_permission">Give reading notification permission</string>
    <string name="save">save</string>
    <string name="running">KakaoBot is Running...</string>
    <string name="save_script">Saved</string>
    <string name="help">Help</string>
    <string name="setting_change_listener">Change listening notification</string>
    <string name="setting_power_caption">KakaoBot option</string>
    <string name="setting_script_caption">Script option</string>
    <string name="setting_etc_caption">etc. option</string>
    <string name="cafe">KakaoBot Cafe</string>
    <string name="change_listener">Change listener</string>
    <string name="changed">Changed</string>
    <string name="canceled">Canceled</string>
    <string name="write_package">Write package name</string>
</resources>
