<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/setting_power_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/setting_card_padding"
            android:paddingTop="@dimen/setting_card_padding"
            android:text="@string/setting_power_caption"
            android:textAppearance="@style/TextAppearance.Design.HelperText" />

    <android.support.v7.widget.CardView
        android:id="@+id/setting_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/chat_card_padding"
        android:layout_marginTop="@dimen/chat_card_padding"
        app:contentPadding="@dimen/chat_card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_power_switch_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/setting_power_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/setting_card_padding"
                    android:layout_weight="1"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/setting_power"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_give_permission_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/setting_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/give_permission"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:id="@+id/setting_give_permission_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_settings_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/setting_script_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/setting_card_padding"
            android:paddingTop="@dimen/setting_card_padding"
            android:text="@string/setting_script_caption"
            android:textAppearance="@style/TextAppearance.Design.HelperText" />

    <android.support.v7.widget.CardView
        android:id="@+id/setting_script"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/chat_card_padding"
        android:layout_marginTop="@dimen/chat_card_padding"
        app:contentPadding="@dimen/chat_card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_reload_script_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/setting_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_reload"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:id="@+id/setting_reload_script_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_refresh_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_edit_script_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/setting_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_script_go"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:id="@+id/setting_edit_script_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_create_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_change_listener_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/setting_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_change_listener"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:id="@+id/setting_change_listener_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_insert_link_black_24dp" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/setting_etc_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/setting_card_padding"
            android:paddingTop="@dimen/setting_card_padding"
            android:text="@string/setting_etc_caption"
            android:textAppearance="@style/TextAppearance.Design.HelperText" />

    <android.support.v7.widget.CardView
        android:id="@+id/setting_etc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/chat_card_padding"
        android:layout_marginTop="@dimen/chat_card_padding"
        app:contentPadding="@dimen/chat_card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_etc_help_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/setting_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/help"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_help_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_etc_cafe_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="@dimen/setting_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cafe"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_cafe_black_24dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
    </ScrollView>